--- a/src/main/webapp/pages/leftnav/leftnav.html
+++ b/src/main/webapp/pages/leftnav/leftnav.html
@@ -16,7 +16,7 @@
             <wm-anchor caption="Administration" name="inventoryLink" iconclass="wi wi-domain" on-click="Variables.goToPage_MunicipalityAdministration.invoke()" accessroles="MunicipalityAdmin,CXAdmin"></wm-anchor>
         </wm-nav-item>
         <wm-nav-item name="nav_item5">
-            <wm-anchor name="anchor15" iconclass="wi wi-work" caption="My Company" on-click="Variables.goToPage_MyCompany.invoke()" accessroles="CXVendorAdmin,CXAdmin"></wm-anchor>
+            <wm-anchor name="anchor15" iconclass="wi wi-work" caption="My Company" on-click="Variables.goToPage_MyCompany.invoke()" accessroles="CXVendorAdmin,CXAdmin,CompanyEmployee"></wm-anchor>
         </wm-nav-item>
         <wm-nav-item name="nav_item10">
             <wm-anchor name="anchor10" iconclass="wi wi-bar-graph" caption="Statistics" on-click="Variables.goToPage_DashBoards.invoke()" accessroles="CXAdmin,MunicipalityAdmin,MunicipalityEmployee"></wm-anchor>
