making delete action only available to CXAdmin Files modified - [ManageMunicipalityVendors]

--- a/src/main/webapp/pages/ManageMunicipalityVendors/ManageMunicipalityVendors.html
+++ b/src/main/webapp/pages/ManageMunicipalityVendors/ManageMunicipalityVendors.html
@@ -46,9 +46,14 @@
                                             show="true" filterwidget="date" readonly="false"></wm-grid-column>
                                             <wm-grid-row-action key="updaterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-mode-edit" title="Review" action="Widgets.dialogPendingApprovals.open()" disabled="false"></wm-grid-row-action>
                                             <wm-grid-row-action key="customRow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-pageview" title="View Details" action="customRowAction($event)" disabled="false"></wm-grid-row-action>
-                                            <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="deleterowAction($event)" accessroles="CXAdmin,MunicipalityAdmin"
-                                            disabled="false"></wm-grid-row-action>
+                                            <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="deleterowAction($event)" accessroles="CXAdmin" disabled="false"></wm-grid-row-action>
                                         </wm-grid>
+                                    </wm-gridcolumn>
+                                </wm-gridrow>
+                                <wm-gridrow name="gridrow18">
+                                    <wm-gridcolumn columnwidth="12" name="gridcolumn19_1">
+                                        <wm-label padding="unset 0.5em" name="label13" caption="The &quot;Delete&quot; action (and this text) are only visible to CXAdmin. Note: deleting a vendor application for a municipality will not delete the supplemental &quot;Contractor Application Form&quot; (if that is required by the municipality)."
+                                        accessroles="CXAdmin" fontweight="bold" fontstyle="italic"></wm-label>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                             </wm-layoutgrid>
@@ -77,9 +82,14 @@
                                             filterwidget="date" readonly="false"></wm-grid-column>
                                             <wm-grid-row-action key="updaterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-mode-edit" title="Review" action="Widgets.dialogReviewApproved.open()" disabled="false"></wm-grid-row-action>
                                             <wm-grid-row-action key="customRow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-pageview" title="View Details" action="customRowAction($event)" disabled="false"></wm-grid-row-action>
-                                            <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="deleterowAction($event)" accessroles="CXAdmin,MunicipalityAdmin"
-                                            disabled="false"></wm-grid-row-action>
+                                            <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="deleterowAction($event)" accessroles="CXAdmin" disabled="false"></wm-grid-row-action>
                                         </wm-grid>
+                                    </wm-gridcolumn>
+                                </wm-gridrow>
+                                <wm-gridrow name="gridrow19_1">
+                                    <wm-gridcolumn columnwidth="12" name="gridcolumn20">
+                                        <wm-label padding="unset 0.5em" name="label14" caption="The &quot;Delete&quot; action (and this text) are only visible to CXAdmin. Note: deleting a vendor application for a municipality will not delete the supplemental &quot;Contractor Application Form&quot; (if that is required by the municipality)."
+                                        accessroles="CXAdmin" fontweight="bold" fontstyle="italic"></wm-label>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                             </wm-layoutgrid>
@@ -108,9 +118,14 @@
                                             filterwidget="date" readonly="false"></wm-grid-column>
                                             <wm-grid-row-action key="updaterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-mode-edit" title="Review" action="Widgets.dialogReviewSuspended.open()" disabled="false"></wm-grid-row-action>
                                             <wm-grid-row-action key="customRow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-pageview" title="View Details" action="customRowAction($event)" disabled="false"></wm-grid-row-action>
-                                            <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="deleterowAction($event)" accessroles="CXAdmin,MunicipalityAdmin"
-                                            disabled="false"></wm-grid-row-action>
+                                            <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="deleterowAction($event)" accessroles="CXAdmin" disabled="false"></wm-grid-row-action>
                                         </wm-grid>
+                                    </wm-gridcolumn>
+                                </wm-gridrow>
+                                <wm-gridrow name="gridrow20_1">
+                                    <wm-gridcolumn columnwidth="12" name="gridcolumn21_1">
+                                        <wm-label padding="unset 0.5em" name="label15" accessroles="CXAdmin" caption="The &quot;Delete&quot; action (and this text) are only visible to CXAdmin. Note: deleting a vendor application for a municipality will not delete the supplemental &quot;Contractor Application Form&quot; (if that is required by the municipality)."
+                                        fontweight="bold" fontstyle="italic"></wm-label>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                             </wm-layoutgrid>
